@@ -143,7 +143,7 @@ routine DoFootnote
 	local a
 	a = object
 	if a < 1 or a >= MAXFOOTNOTES
-		FootnoteMessage(&DoFootnote,2) ! "That isn't a valid footnote number."
+		FootnoteMessage(&DoFootnote,2,a) ! "That isn't a valid footnote number."
 	elseif not footnotelib.footnotearray #a
 		FootnoteMessage(&DoFootnote,3) ! "You haven't encountered that footnote
 												 !   yet."
